design_challenges_01/test/20190018/11_error.txt
11.c: In function ‘ssu_signal’:
11.c:7:2: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
  printf("SIGUSR1 catched!!\n");
  ^
11.c:7:2: warning: incompatible implicit declaration of built-in function ‘printf’
11.c:7:2: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
11.c: In function ‘main’:
11.c:25:3: warning: implicit declaration of function ‘fprintf’ [-Wimplicit-function-declaration]
   fprintf(stderr, "fork error\n");
   ^
11.c:25:3: warning: incompatible implicit declaration of built-in function ‘fprintf’
11.c:25:3: note: include ‘<stdio.h>’ or provide a declaration of ‘fprintf’
11.c:25:11: error: ‘stderr’ undeclared (first use in this function)
   fprintf(stderr, "fork error\n");
           ^
11.c:25:11: note: each undeclared identifier is reported only once for each function it appears in
11.c:31:5: warning: incompatible implicit declaration of built-in function ‘printf’
     printf("child : SIGUSR1 pending\n");
     ^
11.c:31:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
11.c:40:5: warning: incompatible implicit declaration of built-in function ‘printf’
     printf("parent : SIGUSR1 pending\n");
     ^
11.c:40:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
